/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package user;
option java_package = "bisq.user.protobuf";
option java_multiple_files = true;
import "network_identity.proto";
import "security.proto";
import "identity.proto";

message UserProfile {
  string nickName = 1;
  network.identity.NetworkId networkId = 2;
  security.ProofOfWork proofOfWork = 3;
  string terms = 4;
  string statement = 5;
  sint32 avatarVersion = 6;
  sint32 version = 7;
  string applicationVersion = 8;
}

message UserIdentity {
  identity.Identity identity = 1;
  UserProfile userProfile = 2;
}

// Stores
message UserIdentityStore {
  repeated UserIdentity userIdentities = 1;
  optional string selectedUserIdentityId = 2;
  optional security.EncryptedData encryptedData = 3;
  optional security.ScryptParameters scryptParameters = 4;
  sint64 lastUserProfilePublishingDate = 5  [deprecated = true]; // Not used anymore in v2.1.0
}

message NymList {
  repeated string nyms = 1;
}

message UserProfileStore {
  map<string, NymList> nymListByNickName = 1;
  repeated string ignoredUserProfileIds = 2;
  map<string, UserProfile> userProfileById = 3;
}

message ProofOfBurnProof {
  string txId = 1;
  sint64 burntAmount = 2;
  sint64 date = 3;
}
message BondedRoleProof {
  string txId = 1;
  string signature = 2;
}
message InvitationProof {
  string invitationCode = 1;
}

message AccountAgeStore {
  repeated string jsonRequests = 1;
  sint64 lastRequested = 2;
}

message SignedWitnessStore {
  repeated string jsonRequests = 1;
  sint64 lastRequested = 2;
}

message ProfileAgeStore {
  repeated string profileIds = 1;
  sint64 lastRequested = 2;
}

message AuthorizeAccountAgeRequest {
  string profileId = 1;
  string hashAsHex = 2;
  sint64 date = 3;
  string pubKeyBase64 = 4;
  string signatureBase64 = 5;
}

message AuthorizeSignedWitnessRequest {
  string profileId = 1;
  string hashAsHex = 2;
  sint64 accountAgeWitnessDate = 3;
  sint64 witnessSignDate = 4;
  string pubKeyBase64 = 5;
  string signatureBase64 = 6;
}

message AuthorizeTimestampRequest {
  string profileId = 1;
}

message AuthorizedProofOfBurnData {
  sint64 amount = 1;
  sint64 blockTime = 2;
  bytes hash = 3;
  bool staticPublicKeysProvided = 4;
  sint32 version = 5;
  sint32 blockHeight = 6;
  string txId = 7;
}

message AuthorizedBondedReputationData {
  sint64 amount = 1;
  sint64 blockTime = 2;
  bytes hash = 3;
  sint64 lockTime = 4;
  bool staticPublicKeysProvided = 5;
  sint32 version = 6;
  sint32 blockHeight = 7;
  string txId = 8;
}

message AuthorizedAccountAgeData {
  string profileId = 1;
  sint64 date = 2;
  bool staticPublicKeysProvided = 3;
  sint32 version = 4;
}

message AuthorizedSignedWitnessData {
  string profileId = 1;
  sint64 witnessSignDate = 2;
  bool staticPublicKeysProvided = 3;
  sint32 version = 4;
}

message AuthorizedTimestampData {
  string profileId = 1;
  sint64 date = 2;
  bool staticPublicKeysProvided = 3;
  sint32 version = 4;
}

message BannedUserProfileData {
  UserProfile userProfile = 1;
  bool staticPublicKeysProvided = 2;
  sint32 version = 3;
}
message BannedUserStore {
  repeated BannedUserProfileData bannedUserProfileDataSet = 1;
}
